# avocadosh.xyz-old-not-pelican

./: .gitignore  Justfile  README.md  collage.py  generate.py  pyproject.toml
pandoc-cv/: Justfile  README.md  resume.md  resume.org
static/assets/: tipo.css
templates/: about.html  fruits.html  index.html  index.html.jinja2  last_month_tinanay.html  layout.html  layout.html.jinja2
test/: test.py
